# deep-copytrader

./: .env.example  README.md  app.py  bot.py  config.json  dashboard.py  gunicorn_conf.py  main.py  package.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  server.js
app/: config.py  copy_trader.py  models.py  monitor.py  polymarket_client.py  risk.py  web.py
public/: index.html
src/: config.js  enhanced-copytrader.js  main.js  polymarket-api.js
templates/: base.html  dashboard.html  error.html  index.html  wallets_add.html
