[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-copy-bot"
version = "1.0.0"
description = "Polymarket Copy Trading Bot"
requires-python = ">=3.8"
dependencies = [
    "flask==2.3.3",
    "requests==2.31.0",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.0",
]